--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -83,7 +83,7 @@
           <p>No reviews yet.</p>
         {{/if}}
       </div>
-      <a href="/">Go back to main page</a>
+      <a href="/channels">Go back to main page</a>
     </main>
 
     <footer>
