updating channel for PGAge

--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -45,6 +45,8 @@
     <input type="text" id="keywords" name="keywords" /><br />
     <label for="categories">Category:</label>
     <input type="text" id="categories" name="categories" /><br />
+    <label for="startingAge">Parental Guidance Age:</label>
+    <input type="text" id="startingAge" name="startingAge" /><br />
     <button type="submit">Add New Channel</button>
   </form>
 </main>
