--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -124,6 +124,7 @@
           {{#each channel.categories}}{{this}}{{#unless @last}},
             {{/unless}}{{/each}}</p>
         <p>Average Rating: {{channel.averageRating}}</p>
+        <p>Parental Guidance Age: {{channel.startingAge}}</p>
         <main>
           <!-- Add New Review Form -->
           <form method="POST" id="addReviewForm" action="/channels/{{channel._id}}/reviews">
@@ -144,8 +145,12 @@
         <h3>Reviews</h3>
         {{#if channel.reviews.length}}
           <ul>
-            {{#each channel.reviews}}
-              <li>{{this.content}} - Rating: {{this.rating}}</li>
+              {{#each channel.reviews}}
+              <li>
+                - Title: {{this.title}}<br>
+                - Review: {{this.review}}<br>
+                {{this.content}} - Rating: {{this.rating}}<br>
+              </li>
             {{/each}}
           </ul>
         {{else}}
