Updated many parts relating to add reviews button

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,8 +7,6 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-    </nav>
     <main class="container">
       {{{body}}}
     </main>
@@ -18,11 +16,13 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"
     ></script>
-    <script
+
+    {{!-- We currently dont have bootstrap and can remove what is below if you want --}}
+    {{!-- <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
       integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
       crossorigin="anonymous"
-    ></script>
+    ></script> --}}
     <script src="/public/js/main.js"></script>
   </body>
 
