--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -150,7 +150,7 @@
                   </ul>
                 </div>
                 <!-- Comment submission form -->
-                <form action="/reviews/{{this._id}}/comments" method="POST">
+                <form action="/channels/{{../channel._id}}/reviews/{{this._id}}/comments" method="POST">
                   <input type="text" name="comment" placeholder="Enter your comment" required>
                   <button type="submit">Add Comment</button>
                 </form>
