--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -1,58 +1,3 @@
-{{!-- <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{channel.channelTitle}} - Details</title>
-  </head>
-  <body>
-    <header>
-      <h1>{{channel.channelTitle}}</h1>
-    </header>
-
-    <main>
-      <div id="channelDetails">
-        <h2>Channel Overview</h2>
-        <p><strong>Description:</strong> {{channel.channelDescription}}</p>
-        <p><strong>Owner:</strong> {{channel.channelOwnerName}}</p>
-        <p><strong>Website:</strong>
-          <a
-            href="{{channel.channelWebsite}}"
-            target="_blank"
-          >{{channel.channelWebsite}}</a></p>
-        <p>Keywords:
-          {{#each channel.keywords}}<span>{{this}}, </span>{{/each}}</p>
-        <p><strong>Categories:</strong>
-          {{#each channel.categories}}<span>{{this}}, </span>{{/each}}</p>
-        <p><strong>Average Rating:</strong> {{channel.averageRating}}</p>
-        <h3>Reviews</h3>
-        {{#if channel.reviews.length}}
-          <ul>
-            {{#each channel.reviews}}
-              <li>{{this.content}} - Rating: {{this.rating}}</li>
-            {{/each}}
-          </ul>
-        {{else}}
-          <p>No reviews yet.</p>
-        {{/if}}
-      </div>
-    </main>
-
-    <footer>
-      <p>TinyViewerTakes</p>
-    </footer>
-
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script>
-    <script src="/public/js/main.js"></script>
-  </body>
-</html> --}}
-{{!-- 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>{{channel.channelTitle}} - Details</title>
-  </head>
-  <body>
     <header>
       <h1>{{channel.channelTitle}}</h1>
     </header>
@@ -67,56 +12,14 @@
             href="{{channel.website}}"
             target="_blank"
           >{{channel.website}}</a></p>
-        <p>Keywords:
-          {{#each channel.keywords}}<span>{{this}}, </span>{{/each}}</p>
-        <p>Categories:
-          {{#each channel.categories}}<span>{{this}}, </span>{{/each}}</p>
-        <p>Average Rating: {{channel.averageRating}}</p>
-        <h3>Reviews</h3>
-        {{#if channel.reviews.length}}
-          <ul>
-            {{#each channel.reviews}}
-              <li>{{this.content}} - Rating: {{this.rating}}</li>
-            {{/each}}
-          </ul>
-        {{else}}
-          <p>No reviews yet.</p>
-        {{/if}}
-      </div>
-      <a href="/channels">Go back to main page</a>
-    </main>
-
-    <footer>
-      <p>TinyViewerTakes</p>
-    </footer>
-
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script>
-    <script src="/public/js/main.js"></script>
-  </body>
-</html> --}}
-
-    <header>
-      <h1>{{channel.channelTitle}}</h1>
-    </header>
-
-    <main>
-      <div id="channelDetails">
-        <h2>Channel Overview</h2>
-        <p>Description: {{channel.channelDescription}}</p>
-        <p>Owner: {{channel.channelOwnerName}}</p>
-        <p>Website:
-          <a
-            href="{{channel.website}}"
-            target="_blank"
-          >{{channel.website}}</a></p>
-        <p>Keywords:
+        {{!-- <p>Keywords:
           {{#each channel.keywords}}{{this}}{{#unless @last}},
             {{/unless}}{{/each}}</p>
         <p>Categories:
           {{#each channel.categories}}{{this}}{{#unless @last}},
-            {{/unless}}{{/each}}</p>
+            {{/unless}}{{/each}}</p> --}}
+        <p>Keyword: {{channel.keywords}}</p>
+        <p>Category: {{channel.categories}}</p>
         <p>Average Rating: {{channel.averageRating}}</p>
         <p>Parental Guidance Age: {{channel.startingAge}}</p>
         <main>
@@ -141,6 +44,7 @@
                 <div class="review-title">Title: {{this.title}}</div>
                 <div class="review-description">Review: {{this.review}}</div>
                 <div class="review-rating">Rating: {{this.rating}}</div>
+                <button class="remove-review" data-review-id="{{this._id}}">Remove Review</button>
                 <div class="review-comments">
                   <h4>Comments:</h4>
                   <ul>
