--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -12,14 +12,14 @@
             href="{{channel.website}}"
             target="_blank"
           >{{channel.website}}</a></p>
-        {{!-- <p>Keywords:
+        <p>Keywords:
           {{#each channel.keywords}}{{this}}{{#unless @last}},
             {{/unless}}{{/each}}</p>
         <p>Categories:
           {{#each channel.categories}}{{this}}{{#unless @last}},
-            {{/unless}}{{/each}}</p> --}}
-        <p>Keyword: {{channel.keywords}}</p>
-        <p>Category: {{channel.categories}}</p>
+            {{/unless}}{{/each}}</p> 
+        {{!-- <p>Keyword: {{channel.keywords}}</p>
+        <p>Category: {{channel.categories}}</p> --}}
         <p>Average Rating: {{channel.averageRating}}</p>
         <p>Parental Guidance Age: {{channel.startingAge}}</p>
         <main>
