routing to clientside_validation

--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -42,14 +42,13 @@
     <label for="channelOwnerName">Channel Owner Name:</label>
     <input type="text" id="channelOwnerName" name="channelOwnerName" /><br />
     <label for="channelDescription">Channel Description:</label>
-    <input type="text" id="channelDescription" name="channelDescription" /><br
-    />
+    <input type="text" id="channelDescription" name="channelDescription" /><br/>
     <label for="channelWebsite">Channel Website:</label>
     <input type="text" id="channelWebsite" name="channelWebsite" /><br />
-  <label for="keywords">Keywords:</label>
-  <input type="text" id="keywords" name="keywords"/><br />
-  <label for="categories">Categories:</label>
-  <input type="text" id="categories" name="categories" /><br />
+    <label for="keywords">Keywords:</label>
+    <input type="text" id="keywords" name="keywords"/><br />
+    <label for="categories">Categories:</label>
+    <input type="text" id="categories" name="categories" /><br />
     <label for="startingAge">Parental Guidance Age:</label>
     <input type="text" id="startingAge" name="startingAge" /><br />
     <button type="submit">Add New Channel</button>
@@ -65,4 +64,4 @@
 <script
   src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
 ></script>
-<script src="/public/js/main.js"></script>
+<script src="/public/js/clientside_validation.js"></script>
