--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -59,7 +59,7 @@
                 </div>
                 <!-- Comment submission form -->
                 <form action="/channels/{{../channel._id}}/reviews/{{this._id}}/comments" method="POST">
-                  <input type="text" name="comment" placeholder="Enter your comment" required>
+                  <input type="text" name="comment" placeholder="Enter your comment">
                   <button type="submit">Add Comment</button>
                 </form>
 
