--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -36,6 +36,6 @@
         </form>
         <p>Already have an account? <a href="/login">Click here to log-in</a></p>
     </main>
-    <script src="/public/js/clientside_validation.js"></script>
+    <script src="/public/js/main.js"></script>
 </body>
 </html>
