error checking for search channels and go back to main page on login page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,3 +20,4 @@
 </form>
 <p>Don't have an account?
   <a href="/register">Click here to register!</a></p>
+<a href="/channels">Go back to main page</a>
