--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -75,7 +75,7 @@
   </form>
 </main>
 
-{{!-- <a href="/channels">Go back to main page</a> --}}
+<a href="/channels">Go back to main page</a>
 
 <footer>
   <p>TinyViewerTakes</p>
