--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -57,6 +57,7 @@
   <!-- Add New Channel Form -->
   <form method="POST" id="addChannelForm">
     <p>Add new channel here:</p>
+    <div style="color: red;" id="errorDisplay">{{error}}</div>
     <label for="channelTitle">Channel Title:</label>
     <input type="text" id="channelTitle" name="channelTitle" /><br />
     <label for="channelOwnerName">Channel Owner Name:</label>
