--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/styles.css" />
+    {{!-- <link rel="stylesheet" href="/public/css/styles.css" /> --}}
   </head>
 
   <body>
