--- a/views/individualchannel.handlebars
+++ b/views/individualchannel.handlebars
@@ -28,11 +28,11 @@
             <p>Add review here:</p>
             <div style="color: red;" id="addReviewError">{{error}}</div>
             <label for="reviewTitle">Review Title:</label>
-            <input type="text" id="reviewTitle" name="reviewTitle" /><br />
+            <input type="text" id="reviewTitle" name="reviewTitle" required/><br />
             <label for="reviewDescription">Review Description:</label>
-            <input type="text" id="reviewDescription" name="reviewDescription"/><br />
+            <input type="text" id="reviewDescription" name="reviewDescription"required/><br />
             <label for="reviewRating">Rating:</label>
-            <input type="text" id="reviewRating" name="reviewRating" /><br />
+            <input type="text" id="reviewRating" name="reviewRating" required/><br />
             <button type="submit">Add Review</button>
           </form>
         </main>
