--- a/views/channels.handlebars
+++ b/views/channels.handlebars
@@ -1,10 +1,8 @@
-<title>{{title}}</title>
 <header>
   <h1>{{title}}</h1>
 </header>
 
-<main>
-  <h1>MAIN CHANNELS LIST PAGE</h1>
+<div>
   {{#if loggedIn}}
     <p><a href="/logout">Logout</a></p>
   {{else}}
@@ -23,13 +21,13 @@
 
   <form id="searchForm">
     <label for="search_term">Search Channels:</label>
-    <input type="text" id="search_term" name="search_term" />
+    <input type="text" id="search_term" name="search_term" >
     <button type="submit">Search</button>
   </form>
 
   <form id="searchKeywordForm">
     <label for="search_keyword">Search Channels (By Keyword):</label>
-    <input type="text" id="search_keyword" name="search_keyword" />
+    <input type="text" id="search_keyword" name="search_keyword" >
     <button type="submit">Search</button>
   </form>
 
@@ -54,31 +52,31 @@
       </li>
     {{/each}}
   </ul>
-</main>
+</div>
 
-<main>
+<div>
   <!-- Add New Channel Form -->
   <form method="POST" id="addChannelForm">
     <p>Add new channel here:</p>
     <div style="color: red;" id="errorDisplay">{{error}}</div>
     <label for="channelTitle">Channel Title:</label>
-    <input type="text" id="channelTitle" name="channelTitle" /><br />
+    <input type="text" id="channelTitle" name="channelTitle"><br>
     <label for="channelOwnerName">Channel Owner Name:</label>
-    <input type="text" id="channelOwnerName" name="channelOwnerName" /><br />
+    <input type="text" id="channelOwnerName" name="channelOwnerName" ><br>
     <label for="channelDescription">Channel Description:</label>
-    <input type="text" id="channelDescription" name="channelDescription" /><br
-    />
+    <input type="text" id="channelDescription" name="channelDescription"><br>
+
     <label for="channelWebsite">Channel Website:</label>
-    <input type="text" id="channelWebsite" name="channelWebsite" /><br />
+    <input type="text" id="channelWebsite" name="channelWebsite"><br>
     <label for="keywords">Keywords(Optional):</label>
-    <input type="text" id="keywords" name="keywords" /><br />
+    <input type="text" id="keywords" name="keywords"><br>
     <label for="categories">Categories(Optional):</label>
-    <input type="text" id="categories" name="categories" /><br />
+    <input type="text" id="categories" name="categories"><br>
     <label for="startingAge">Parental Guidance Age:</label>
-    <input type="text" id="startingAge" name="startingAge" /><br />
+    <input type="text" id="startingAge" name="startingAge"><br>
     <button type="submit">Add New Channel</button>
   </form>
-</main>
+</div>
 
 <a href="/channels">Go back to main page</a>
 
