--- a/views/error.handlebars
+++ b/views/error.handlebars
@@ -11,7 +11,7 @@ they are not an admin user.
 </header>
 <section>
   <h2>Error Messages</h2>
-  <ul id="error-message" class="error-message">{{errorMessage}}</ul>
+  <div id="error-message" class="error-message">{{errorMessage}}</div>
 </section>
 <div class="directory">
   <ul>
