--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8" >
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/styles.css" />
+    <link rel="stylesheet" href="/public/css/styles.css" >
   </head>
 
   <body>
