--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,16 +5,11 @@
 <form id="login-form" action="/login" method="POST">
   <div>
     <label for="emailAddressInput">Email Address:</label>
-    <input
-      type="email"
-      id="emailAddressInput"
-      name="emailAddressInput"
-      required
-    />
+    <input type="email" id="emailAddressInput" name="emailAddressInput" required>
   </div>
   <div>
     <label for="passwordInput">Password:</label>
-    <input type="password" id="passwordInput" name="passwordInput" required />
+    <input type="password" id="passwordInput" name="passwordInput" required>
   </div>
   <button type="submit">Login</button>
 </form>
