cleaned up handlebars of commented out code

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8" />
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/styles.css" >
+    <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
 
   <body>
@@ -17,13 +16,6 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"
     ></script>
-
-    {{!-- We currently dont have bootstrap and can remove what is below if you want --}}
-    {{!-- <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-      crossorigin="anonymous"
-    ></script> --}}
     <script src="/public/js/main.js"></script>
   </body>
 
