--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-
-  <head>
-    <meta charset="UTF-8" />
+<head>
+  <meta charset="UTF-8">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/public/css/styles.css" />
-  </head>
-
-  <body>
-    <main class="container">
+    <link rel="stylesheet" href="/public/css/styles.css">
+</head>
+<body>
+  <main class="container">
       {{{body}}}
     </main>
 
@@ -17,6 +16,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="/public/js/main.js"></script>
-  </body>
-
+</body>
 </html>
